# mydjango

./: .env  main.py  pyproject.toml
mydjango/base/: admin.py  models.py  urls.py  views.py
mydjango/base/migrations/: 0001_initial.py
mydjango/base/templates/base/: home.html  name.html  puk.html  query.html
mydjango/market/: urls.py  views.py
mydjango/market/templates/market/: market.html
mydjango/mydjango/: config.py  settings.py  urls.py
mydjango/myorm/: admin.py  models.py  urls.py  views.py
mydjango/myorm/migrations/: 0001_initial.py
mydjango/static/: style.css
mydjango/templates/: base.html
