[project]
name = "mydjano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.5",
    "mariadb>=1.1.13",
    "mysql>=0.0.3",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
